--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -5,11 +5,41 @@ Versions
   Next Release
   {
     
-    
-    # BUGFIX: ProductionEnvironment.py - Correct formatting in print statement for case where LbLogin wasn't found in the local or shared areas.    
-    Core = co_2010080601
-
   }
+  
+  v5r8
+  {
+
+    # NEW: The Bkk propagate the data quality flag (the flag inherited from the input file) when the jobs 
+    #      types are Merge. 
+    BookkeepingSystem = bk_2010080601
+    
+    ConfigurationSystem = cs_2010072701
+    
+    # BUGFIX: ProductionEnvironment - correct formatting in print statement for case where 
+    #         LbLogin wasn't found in the local or shared areas
+    Core = co_2010080601  
+    DataManagementSystem = dm_2010072201
+    
+    # BUGFIX: Production.py - Minor change in a parameter name.
+    Interfaces = if_2010080302   
+    
+    ProductionManagementSystem = pm_2010072701
+    
+    # NEW: UserJobFinalization.py - Now allow wildcards in the output data specification as requested by users.
+    # BUGFIX: UploadLogFile.py - Resolve failover upload of log files after the recent LogSE failures highlighted a problem.
+    # NEW: UserJobFinalization.py - Now allow wildcards in the output data specification as requested by users, only try to glob items with a wildcard.
+    # NEW: UserJobFinalization.py - Replication and registration now performed to a 2nd Tier-1 site via a hack to ensure that only the CERN catalog instances are active during the operation.
+    # NEW: BookkeepingReport.py - Add JobType parameter to allow the propagation of DQ flags in the merging production case as requested by the DQ team.
+    # NEW: GaudiApplication.py - Disable watchdog checks during merging production application steps.
+    # CHANGE: Cleanup in production templates
+    Workflow = wo_2010080702
+    
+    ResourceStatusSystem = rs_2010072801 
+    SAMSystem = sa_2010080301
+    WorkloadManagementSystem = wm_2010073001
+
+  }      
   
   v5r8-pre1
   {
