git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@28008 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,7 +4,11 @@ Versions
 
   Next Release
   {
-    
+   
+   # NEW: Bkk returns the production ids which are corresponding to a processing pass and run number
+   # NEW: A new quality method implemented which returns the quality flags which are corresponds to a run(s)
+   # CHANGE: Bkk allows to see the tree which start with certification or development 
+   BookkeepingSystem = bk_2010081301
   }
   
   v5r8
