Added Workflow and Interfaces tags.
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@28036 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -5,10 +5,21 @@ Versions
   Next Release
   {
    
-   # NEW: Bkk returns the production ids which are corresponding to a processing pass and run number
-   # NEW: A new quality method implemented which returns the quality flags which are corresponds to a run(s)
-   # CHANGE: Bkk allows to see the tree which start with certification or development 
-   BookkeepingSystem = bk_2010081301
+    # NEW: Bkk returns the production ids which are corresponding to a processing pass and run number
+    # NEW: A new quality method implemented which returns the quality flags which are corresponds to a run(s)
+    # CHANGE: Bkk allows to see the tree which start with certification or development 
+    BookkeepingSystem = bk_2010081301
+ 
+
+    # BUGFIX: Production.py - Avoid duplicates in software package list.
+    # CHANGE: getFilesWithGivenDataSets -> getFilesWithGivenDataSetsForUsers at the request of Zoltan.
+    Interfaces = if_2010081601  
+   
+    # NEW: FULL_RealData_Merging_run.py - Added template for real data reconstruction with optional merging embedded.
+    # NEW: Certification_Testing_run.py - First import of Certification Testing script. This is not a workflow template for the request page but a self-contained certification test relying on the DIRAC CS for evolving parameters. 
+    # BUGFIX: MC_Simulation_run.py - Minor fixes after testing.
+    Workflow = wo_2010081601   
+   
   }
   
   v5r8
