git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@28040 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -5,10 +5,11 @@ Versions
   Next Release
   {
    
+    # NEW: getFilesWithGivenDataSetsForUsers returns the file meta data(Eventstat,EventInputStat...). This method used by Ganga.
     # NEW: Bkk returns the production ids which are corresponding to a processing pass and run number
     # NEW: A new quality method implemented which returns the quality flags which are corresponds to a run(s)
     # CHANGE: Bkk allows to see the tree which start with certification or development 
-    BookkeepingSystem = bk_2010081301
+    BookkeepingSystem = bk_2010081701
  
 
     # BUGFIX: Production.py - Avoid duplicates in software package list.
