LHCbDIRAC/Interfaces/if_2010081801
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@28052 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -14,7 +14,8 @@ Versions
 
     # BUGFIX: Production.py - Avoid duplicates in software package list.
     # CHANGE: getFilesWithGivenDataSets -> getFilesWithGivenDataSetsForUsers at the request of Zoltan.
-    Interfaces = if_2010081601  
+    # NEW: DiracLHCb.py - Expose BK client functionality. 
+    Interfaces = if_2010081801  
    
     # NEW: FULL_RealData_Merging_run.py - Added template for real data reconstruction with optional merging embedded.
     # NEW: Certification_Testing_run.py - First import of Certification Testing script. This is not a workflow template for the request page but a self-contained certification test relying on the DIRAC CS for evolving parameters. 
