--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -9,7 +9,8 @@ Versions
     # NEW: Bkk returns the production ids which are corresponding to a processing pass and run number
     # NEW: A new quality method implemented which returns the quality flags which are corresponds to a run(s)
     # CHANGE: Bkk allows to see the tree which start with certification or development 
-    BookkeepingSystem = bk_2010081701
+    # CHANGE: The bkk returns the distinct data taking conditions.
+    BookkeepingSystem = bk_2010081901
  
 
     # BUGFIX: Production.py - Avoid duplicates in software package list.
