git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@28104 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -8,9 +8,11 @@ Versions
     # NEW: getFilesWithGivenDataSetsForUsers returns the file meta data(Eventstat,EventInputStat...). This method used by Ganga.
     # NEW: Bkk returns the production ids which are corresponding to a processing pass and run number
     # NEW: A new quality method implemented which returns the quality flags which are corresponds to a run(s)
+    # NEW: dirac-bookkeeping-production-informations returns the EventInputStat
     # CHANGE: Bkk allows to see the tree which start with certification or development 
     # CHANGE: The bkk returns the distinct data taking conditions.
-    BookkeepingSystem = bk_2010081901
+    # CHANGE: The Advanced save dialog show the 'Select a site' text by default.
+    BookkeepingSystem = bk_2010082301
  
 
     # BUGFIX: Production.py - Avoid duplicates in software package list.
