git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@28126 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -12,7 +12,8 @@ Versions
     # CHANGE: Bkk allows to see the tree which start with certification or development 
     # CHANGE: The bkk returns the distinct data taking conditions.
     # CHANGE: The Advanced save dialog show the 'Select a site' text by default.
-    BookkeepingSystem = bk_2010082301
+    # CHANGE: The Bkk allows max 10 depth when you use getAncesstor and getDescendents methods.
+    BookkeepingSystem = bk_2010082501
  
 
     # BUGFIX: Production.py - Avoid duplicates in software package list.
