--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -9,11 +9,12 @@ Versions
     # NEW: Bkk returns the production ids which are corresponding to a processing pass and run number
     # NEW: A new quality method implemented which returns the quality flags which are corresponds to a run(s)
     # NEW: dirac-bookkeeping-production-informations returns the EventInputStat
+    # NEW: The replica flag check added into the getFilesWithGivenDataSets and getFilesWithGivenDataSetsForUsers methods. 
     # CHANGE: Bkk allows to see the tree which start with certification or development 
     # CHANGE: The bkk returns the distinct data taking conditions.
     # CHANGE: The Advanced save dialog show the 'Select a site' text by default.
     # CHANGE: The Bkk allows max 10 depth when you use getAncesstor and getDescendents methods.
-    BookkeepingSystem = bk_2010082501
+    BookkeepingSystem = bk_2010082701
  
 
     # BUGFIX: Production.py - Avoid duplicates in software package list.
