--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -5,6 +5,8 @@ Versions
   Next Release
   {
    
+    # NEW: The Bkk allows to set the data quality by run. When a new file enter to the database, then the client check the quality flag and propagate the flag to the new files.
+    # NEW: The Bkk store the luminosity by run and by files.
     # NEW: getFilesWithGivenDataSetsForUsers returns the file meta data(Eventstat,EventInputStat...). This method used by Ganga.
     # NEW: Bkk returns the production ids which are corresponding to a processing pass and run number
     # NEW: A new quality method implemented which returns the quality flags which are corresponds to a run(s)
@@ -14,7 +16,7 @@ Versions
     # CHANGE: The bkk returns the distinct data taking conditions.
     # CHANGE: The Advanced save dialog show the 'Select a site' text by default.
     # CHANGE: The Bkk allows max 10 depth when you use getAncesstor and getDescendents methods.
-    BookkeepingSystem = bk_2010082701
+    BookkeepingSystem = bk_2010082902
  
 
     # BUGFIX: Production.py - Avoid duplicates in software package list.
