--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -23,11 +23,22 @@ Versions
     # CHANGE: getFilesWithGivenDataSets -> getFilesWithGivenDataSetsForUsers at the request of Zoltan.
     # NEW: DiracLHCb.py - Expose BK client functionality. 
     Interfaces = if_2010081801  
+
+    # CHANGE: DataRecoveryAgent.py - Some minor optimizations, now rely on production management system status since we no longer consider Stalled jobs directly.  Updated default of removal flag to True since this was enabled in production.
+    ProductionManagementSystem = pm_2010090201
    
     # NEW: FULL_RealData_Merging_run.py - Added template for real data reconstruction with optional merging embedded.
     # NEW: Certification_Testing_run.py - First import of Certification Testing script. This is not a workflow template for the request page but a self-contained certification test relying on the DIRAC CS for evolving parameters. 
-    # BUGFIX: MC_Simulation_run.py - Minor fixes after testing.
-    Workflow = wo_2010081601   
+    # BUGFIX: MC_Simulation_run.py - Minor fixes after testing.    
+    # CHANGE: FULL_RealData_Merging_run.py - Synchronize the merging production input data policy with that of the reconstruction production e.g. download.
+    # NEW: GaudiApplication.py - Add "hospital" to the list of job types potentially having streamed outputs.    
+    # NEW: UserJobFinalization.py - Added new replicateAndRegister option to specify the file catalog for user file uploads, requires new DMS tag.
+    # BUGFIX: UploadOutputData.py - Resolve setting of BK replica flag when registration requests are set for a put with registration failure, requires new DMS tag for updated FailoverTransfer.
+    Workflow = wo_2010090201
+    
+    # CHANGE: InputDataResolution.py - Updated hack for RAW protocol access of prepending "root:" to prepending "mdf:" after updates from Markus.
+    Core = co_2010090201 
+    
    
   }
   
