Updated Core tag for CondDB access changes, tested locally.
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@28233 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -37,8 +37,9 @@ Versions
     Workflow = wo_2010090201
     
     # CHANGE: InputDataResolution.py - Updated hack for RAW protocol access of prepending "root:" to prepending "mdf:" after updates from Markus.
-    Core = co_2010090201 
-    
+    # CHANGE: CondDBAccess.py - Updated to use the DIRAC CS to persist CondDB access information.  This allows to have a CondDB mask and also to easily obtain lookup files for individual sites on request.
+    # CHANGE: ProductionEnvironment.py - Uses updated CondDBAccess utility.
+    Core = co_2010090601 
    
   }
   
