--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,64 +4,86 @@ Versions
 
   Next Release
   {
-   
+
     # NEW: The Bkk allows to set the data quality by run. When a new file enter to the database, then the client check the quality flag and propagate the flag to the new files.
     # NEW: The Bkk store the luminosity by run and by files.
     # NEW: getFilesWithGivenDataSetsForUsers returns the file meta data(Eventstat,EventInputStat...). This method used by Ganga.
     # NEW: Bkk returns the production ids which are corresponding to a processing pass and run number
     # NEW: A new quality method implemented which returns the quality flags which are corresponds to a run(s)
     # NEW: dirac-bookkeeping-production-informations returns the EventInputStat
-    # NEW: The replica flag check added into the getFilesWithGivenDataSets and getFilesWithGivenDataSetsForUsers methods. 
-    # CHANGE: Bkk allows to see the tree which start with certification or development 
+    # NEW: The replica flag check added into the getFilesWithGivenDataSets and getFilesWithGivenDataSetsForUsers methods.
+    # CHANGE: Bkk allows to see the tree which start with certification or development
     # CHANGE: The bkk returns the distinct data taking conditions.
     # CHANGE: The Advanced save dialog show the 'Select a site' text by default.
     # CHANGE: The Bkk allows max 10 depth when you use getAncesstor and getDescendents methods.
     BookkeepingSystem = bk_2010082902
- 
+
 
     # BUGFIX: Production.py - Avoid duplicates in software package list.
     # CHANGE: getFilesWithGivenDataSets -> getFilesWithGivenDataSetsForUsers at the request of Zoltan.
-    # NEW: DiracLHCb.py - Expose BK client functionality. 
-    Interfaces = if_2010081801  
+    # NEW: DiracLHCb.py - Expose BK client functionality.
+    Interfaces = if_2010081801
 
     # CHANGE: DataRecoveryAgent.py - Some minor optimizations, now rely on production management system status since we no longer consider Stalled jobs directly.  Updated default of removal flag to True since this was enabled in production.
     ProductionManagementSystem = pm_2010090201
-   
+
     # NEW: FULL_RealData_Merging_run.py - Added template for real data reconstruction with optional merging embedded.
-    # NEW: Certification_Testing_run.py - First import of Certification Testing script. This is not a workflow template for the request page but a self-contained certification test relying on the DIRAC CS for evolving parameters. 
-    # BUGFIX: MC_Simulation_run.py - Minor fixes after testing.    
+    # NEW: Certification_Testing_run.py - First import of Certification Testing script. This is not a workflow template for the request page but a self-contained certification test relying on the DIRAC CS for evolving parameters.
+    # BUGFIX: MC_Simulation_run.py - Minor fixes after testing.
     # CHANGE: FULL_RealData_Merging_run.py - Synchronize the merging production input data policy with that of the reconstruction production e.g. download.
-    # NEW: GaudiApplication.py - Add "hospital" to the list of job types potentially having streamed outputs.    
+    # NEW: GaudiApplication.py - Add "hospital" to the list of job types potentially having streamed outputs.
     # NEW: UserJobFinalization.py - Added new replicateAndRegister option to specify the file catalog for user file uploads, requires new DMS tag.
     # BUGFIX: UploadOutputData.py - Resolve setting of BK replica flag when registration requests are set for a put with registration failure, requires new DMS tag for updated FailoverTransfer.
     Workflow = wo_2010090201
-    
+
     # CHANGE: InputDataResolution.py - Updated hack for RAW protocol access of prepending "root:" to prepending "mdf:" after updates from Markus.
     # CHANGE: CondDBAccess.py - Updated to use the DIRAC CS to persist CondDB access information.  This allows to have a CondDB mask and also to easily obtain lookup files for individual sites on request.
     # CHANGE: ProductionEnvironment.py - Uses updated CondDBAccess utility.
-    Core = co_2010090601 
-   
+    Core = co_2010090601
+
   }
-  
+
+  v5r9
+  {
+    # NEW: Use LCGCMT 58e and Qt 4.6.3
+    BookkeepingSystem = bk_2010080601
+
+    ConfigurationSystem = cs_2010072701
+
+    Core = co_2010080601
+    DataManagementSystem = dm_2010072201
+
+    Interfaces = if_2010080302
+
+    ProductionManagementSystem = pm_2010072701
+
+    Workflow = wo_2010080702
+
+    ResourceStatusSystem = rs_2010072801
+    SAMSystem = sa_2010080301
+    WorkloadManagementSystem = wm_2010073001
+
+  }
+
   v5r8
   {
 
-    # NEW: The Bkk propagate the data quality flag (the flag inherited from the input file) when the jobs 
-    #      types are Merge. 
+    # NEW: The Bkk propagate the data quality flag (the flag inherited from the input file) when the jobs
+    #      types are Merge.
     BookkeepingSystem = bk_2010080601
-    
+
     ConfigurationSystem = cs_2010072701
-    
-    # BUGFIX: ProductionEnvironment - correct formatting in print statement for case where 
+
+    # BUGFIX: ProductionEnvironment - correct formatting in print statement for case where
     #         LbLogin wasn't found in the local or shared areas
-    Core = co_2010080601  
+    Core = co_2010080601
     DataManagementSystem = dm_2010072201
-    
+
     # BUGFIX: Production.py - Minor change in a parameter name.
-    Interfaces = if_2010080302   
-    
+    Interfaces = if_2010080302
+
     ProductionManagementSystem = pm_2010072701
-    
+
     # NEW: UserJobFinalization.py - Now allow wildcards in the output data specification as requested by users.
     # BUGFIX: UploadLogFile.py - Resolve failover upload of log files after the recent LogSE failures highlighted a problem.
     # NEW: UserJobFinalization.py - Now allow wildcards in the output data specification as requested by users, only try to glob items with a wildcard.
@@ -70,29 +92,29 @@ Versions
     # NEW: GaudiApplication.py - Disable watchdog checks during merging production application steps.
     # CHANGE: Cleanup in production templates
     Workflow = wo_2010080702
-    
-    ResourceStatusSystem = rs_2010072801 
+
+    ResourceStatusSystem = rs_2010072801
     SAMSystem = sa_2010080301
     WorkloadManagementSystem = wm_2010073001
 
-  }      
-  
+  }
+
   v5r8-pre1
   {
 
-    # NEW: The Bkk propagate the data quality flag (the flag inherited from the input file) when the jobs 
-    #      types are Merge. 
+    # NEW: The Bkk propagate the data quality flag (the flag inherited from the input file) when the jobs
+    #      types are Merge.
     BookkeepingSystem = bk_2010080601
-    
+
     ConfigurationSystem = cs_2010072701
-    Core = co_2010073001  
+    Core = co_2010073001
     DataManagementSystem = dm_2010072201
-    
+
     # BUGFIX: Production.py - Minor change in a parameter name.
-    Interfaces = if_2010080302   
-    
+    Interfaces = if_2010080302
+
     ProductionManagementSystem = pm_2010072701
-    
+
     # NEW: UserJobFinalization.py - Now allow wildcards in the output data specification as requested by users.
     # BUGFIX: UploadLogFile.py - Resolve failover upload of log files after the recent LogSE failures highlighted a problem.
     # NEW: UserJobFinalization.py - Now allow wildcards in the output data specification as requested by users, only try to glob items with a wildcard.
@@ -100,13 +122,13 @@ Versions
     # NEW: BookkeepingReport.py - Add JobType parameter to allow the propagation of DQ flags in the merging production case as requested by the DQ team.
     # NEW: GaudiApplication.py - Disable watchdog checks during merging production application steps.
     Workflow = wo_2010080601
-    
-    ResourceStatusSystem = rs_2010072801 
+
+    ResourceStatusSystem = rs_2010072801
     SAMSystem = sa_2010080301
     WorkloadManagementSystem = wm_2010073001
 
-  }      
-  
+  }
+
   v5r7
   {
 
@@ -115,21 +137,21 @@ Versions
     # CHANGE: The replica flag checking has been removed from the getAllAncestors method.
     # CHANGE: The Bkk Gui show the files which are OK by default.
     BookkeepingSystem = bk_2010080201
-    
+
     # NEW: UsersAndGroups agent - send a mail if we need to delete USER in LFC
-    # BUGFIX: UsersAndGroups - when a user is new in the CS it was causing an error 
+    # BUGFIX: UsersAndGroups - when a user is new in the CS it was causing an error
     #         while generating mail message.
     ConfigurationSystem = cs_2010072701
 
     # FIX: diracEnv.(c)sh - change location of the GridEnv
     # BUGFIX: ProductionEnvironment.py - Resolved issue of ANY being specified for system configuration
-    # CHANGE: ProductionOptions.py - Remove special case for specifying Moore input data 
-    # CHANGE: CombinedSoftwareInstallation - - Map system config ANY to a compatible 
+    # CHANGE: ProductionOptions.py - Remove special case for specifying Moore input data
+    # CHANGE: CombinedSoftwareInstallation - - Map system config ANY to a compatible
     #         platform for LHCb in all cases
     # CHANGE: CombinedSoftwareInstallation.py - Fix for local running in case where "ANY" is requested for the sytem config.
-    # CHANGE: ProductionOptions.py - A change to the DaVinci stripping options was requested. 
+    # CHANGE: ProductionOptions.py - A change to the DaVinci stripping options was requested.
     # NEW: JobPathResolution.py - Allow to bypass input data resolution mechanism if desired.
-    Core = co_2010073001  
+    Core = co_2010073001
 
     # CHANGE: Bulk publish of directories in storage usage
     # CHANGE: Agents - consider also /LocalSite/InstancePath as alternative to rootPath
@@ -137,12 +159,12 @@ Versions
 
     # CHANGE: Production.py - Update default value of system config for productions to ANY
     # NEW: DiracLHCb.py - Added bkMetadata method as requested by users.
-    # NEW: DiracLHCb.py - Added checkSites, checkSEs and gridWeather to allow users to check site and SE status.   
+    # NEW: DiracLHCb.py - Added checkSites, checkSEs and gridWeather to allow users to check site and SE status.
     # NEW: Production.py - Introduce flag to allow abandoning the output of a given step e.g. EXPRESS DaVinci step
     # NEW: LHCbJob.py - Added optional flag to bypass input data resolution mechanism for 'download' input data policy.
     # NEW: LHCbJob.py - Add possibility to rename standard output and standard error files.
     Interfaces = if_2010080301
-    
+
     # CHANGE: Do not overwrite the MaxRetry in the DataRecoveryAgent.
     # CHANGE: Agents - consider also /LocalSite/InstancePath as alternative to rootPath
     # FIX: ProductionRequestDB - URL to the Request page is fixed to support new convention
@@ -157,16 +179,16 @@ Versions
     # CHANGE: Updated Configurations
     # NEW: use of accounting cached plots
     # CHANGE: check frequency
-    ResourceStatusSystem = rs_2010072801 
+    ResourceStatusSystem = rs_2010072801
 
     # CHANGE add script to submit all SAM jobs without publishing results
     # BUGFIX: TestApplications.py - Finally resolve SAM stdout issue by taking advantage of new features in Interfaces
     SAMSystem = sa_2010080301
-    
+
     # CHANGE: AncestorFilesAgent.py - Make a minor status message more succinct in case of failure
     WorkloadManagementSystem = wm_2010073001
-  }    
- 
+  }
+
   v5r6
   {
 
@@ -201,7 +223,7 @@ Versions
 
     # CHANGE add script to submit all SAM jobs without publishing results
     SAMSystem = sa_2010061601
-    
+
     WorkloadManagementSystem = wm_2010012001
 
   }
@@ -240,7 +262,7 @@ Versions
 
     # CHANGE add script to submit all SAM jobs without publishing results
     SAMSystem = sa_2010061601
-    
+
     WorkloadManagementSystem = wm_2010012001
 
   }
