--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -5,6 +5,7 @@ Versions
   Next Release
   {
 
+    
     # NEW: The Bkk allows to set the data quality by run. When a new file enter to the database, then the client check the quality flag and propagate the flag to the new files.
     # NEW: The Bkk store the luminosity by run and by files.
     # NEW: getFilesWithGivenDataSetsForUsers returns the file meta data(Eventstat,EventInputStat...). This method used by Ganga.
@@ -16,7 +17,9 @@ Versions
     # CHANGE: The bkk returns the distinct data taking conditions.
     # CHANGE: The Advanced save dialog show the 'Select a site' text by default.
     # CHANGE: The Bkk allows max 10 depth when you use getAncesstor and getDescendents methods.
-    BookkeepingSystem = bk_2010082902
+    # CHANGE: Bkk is using bind variables after I noticed a few queries doesn't use bind variables. 
+    # BUGFIX: the descendents methods had problem when the files didn't processed.
+    BookkeepingSystem = bk_2010091401
 
 
     # BUGFIX: Production.py - Avoid duplicates in software package list.
