--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -22,10 +22,11 @@ Versions
     BookkeepingSystem = bk_2010091401
 
 
-    # BUGFIX: Production.py - Avoid duplicates in software package list.
+    # CHANGE: Production.py - Avoid duplicates in software package list.  Add support for MDST productions with DaVinci. 
     # CHANGE: getFilesWithGivenDataSets -> getFilesWithGivenDataSetsForUsers at the request of Zoltan.
     # NEW: DiracLHCb.py - Expose BK client functionality.
-    Interfaces = if_2010081801
+    # CHANGE: LHCbJob.py - Promoted setInputDataPolicy() to the base class. 
+    Interfaces = if_2010091401
 
     # CHANGE: DataRecoveryAgent.py - Some minor optimizations, now rely on production management system status since we no longer consider Stalled jobs directly.  Updated default of removal flag to True since this was enabled in production.
     ProductionManagementSystem = pm_2010090201
@@ -34,15 +35,19 @@ Versions
     # NEW: Certification_Testing_run.py - First import of Certification Testing script. This is not a workflow template for the request page but a self-contained certification test relying on the DIRAC CS for evolving parameters.
     # BUGFIX: MC_Simulation_run.py - Minor fixes after testing.
     # CHANGE: FULL_RealData_Merging_run.py - Synchronize the merging production input data policy with that of the reconstruction production e.g. download.
-    # NEW: GaudiApplication.py - Add "hospital" to the list of job types potentially having streamed outputs.
-    # NEW: UserJobFinalization.py - Added new replicateAndRegister option to specify the file catalog for user file uploads, requires new DMS tag.
-    # BUGFIX: UploadOutputData.py - Resolve setting of BK replica flag when registration requests are set for a put with registration failure, requires new DMS tag for updated FailoverTransfer.
-    Workflow = wo_2010090201
+    # NEW: GaudiApplication.py - Add "hospital" to the list of job types potentially having streamed outputs. Also now support MDST files in an extension to the DaVinci streaming case.
+    # NEW: UserJobFinalization.py - Added new replicateAndRegister option to specify the file catalog for user file uploads, requires new DMS tag. Also fix for restriction of SEs when nothing is specified.
+    # BUGFIX: UploadOutputData.py - Resolve setting of BK replica flag when registration requests are set for a put with registration failure, requires new DMS tag for updated FailoverTransfer. Check the BK for a second time after uploading all job outputs to see that there are no other descendent files with replica flags.  
+    # BUGFIX: RemoveInputData.py - Bug fix for setting failover request for removal operation.
+    # BUGFIX: RootApplication.py - Use SetupProject of the corresponding DaVinci version to set the environment.
+    # NEW: MicroDST_StreamedData_run.py - Initial iteration of MicroDST workflow template. 
+    Workflow = wo_2010091401
 
     # CHANGE: InputDataResolution.py - Updated hack for RAW protocol access of prepending "root:" to prepending "mdf:" after updates from Markus.
     # CHANGE: CondDBAccess.py - Updated to use the DIRAC CS to persist CondDB access information.  This allows to have a CondDB mask and also to easily obtain lookup files for individual sites on request.
     # CHANGE: ProductionEnvironment.py - Uses updated CondDBAccess utility.
-    Core = co_2010090601
+    # CHANGE: ProductionOptions.py - Added initial iteration of MDST options. 
+    Core = co_2010091401
 
   }
 
