LHCbDIRAC/Core/co_2010091501
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@28397 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -47,7 +47,8 @@ Versions
     # CHANGE: CondDBAccess.py - Updated to use the DIRAC CS to persist CondDB access information.  This allows to have a CondDB mask and also to easily obtain lookup files for individual sites on request.
     # CHANGE: ProductionEnvironment.py - Uses updated CondDBAccess utility.
     # CHANGE: ProductionOptions.py - Added initial iteration of MDST options. 
-    Core = co_2010091401
+    # BUGFIX: CombinedSoftwareInstallation.py - Some cleanup and fixes for case where software is not found already preinstalled.     
+    Core = co_2010091501
 
   }
 
