More updates to Core, Workflow and Interfaces.
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@28403 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -22,11 +22,13 @@ Versions
     BookkeepingSystem = bk_2010091401
 
 
-    # CHANGE: Production.py - Avoid duplicates in software package list.  Add support for MDST productions with DaVinci. 
-    # CHANGE: getFilesWithGivenDataSets -> getFilesWithGivenDataSetsForUsers at the request of Zoltan.
+    # CHANGE: Production.py - Avoid duplicates in software package list.  
+    # CHANGE: Production.py - Add support for MDST productions with DaVinci.
+    # CHANGE: Production.py - Productions no longer use  SendBookkeeping, this has been factored into the UploadOutputData module. 
+    # CHANGE: DiracLHCb.py - getFilesWithGivenDataSets -> getFilesWithGivenDataSetsForUsers at the request of Zoltan.
     # NEW: DiracLHCb.py - Expose BK client functionality.
     # CHANGE: LHCbJob.py - Promoted setInputDataPolicy() to the base class. 
-    Interfaces = if_2010091401
+    Interfaces = if_2010091501
 
     # CHANGE: DataRecoveryAgent.py - Some minor optimizations, now rely on production management system status since we no longer consider Stalled jobs directly.  Updated default of removal flag to True since this was enabled in production.
     ProductionManagementSystem = pm_2010090201
@@ -35,13 +37,17 @@ Versions
     # NEW: Certification_Testing_run.py - First import of Certification Testing script. This is not a workflow template for the request page but a self-contained certification test relying on the DIRAC CS for evolving parameters.
     # BUGFIX: MC_Simulation_run.py - Minor fixes after testing.
     # CHANGE: FULL_RealData_Merging_run.py - Synchronize the merging production input data policy with that of the reconstruction production e.g. download.
-    # NEW: GaudiApplication.py - Add "hospital" to the list of job types potentially having streamed outputs. Also now support MDST files in an extension to the DaVinci streaming case.
+    # CHANGE: FULL_RealData_Merging_run.py - Update hack for list of streams to be saved.
+    # NEW: GaudiApplication.py - Add "hospital" to the list of job types potentially having streamed outputs. 
+    # NEW: GaudiApplication.py - Also now support MDST files in an extension to the DaVinci streaming case.
     # NEW: UserJobFinalization.py - Added new replicateAndRegister option to specify the file catalog for user file uploads, requires new DMS tag. Also fix for restriction of SEs when nothing is specified.
-    # BUGFIX: UploadOutputData.py - Resolve setting of BK replica flag when registration requests are set for a put with registration failure, requires new DMS tag for updated FailoverTransfer. Check the BK for a second time after uploading all job outputs to see that there are no other descendent files with replica flags.  
+    # BUGFIX: UploadOutputData.py - Resolve setting of BK replica flag when registration requests are set for a put with registration failure, requires new DMS tag for updated FailoverTransfer. 
+    # CHANGE: UploadOutputData.py - Check the BK for a second time after uploading all job outputs to see that there are no other descendent files with replica flags.  
+    # CHANGE: UploadOutputData.py - Now only send the BK records for a job after all ouputs are uploaded (at least to failover) and after the final check on whether job inputs are already processed.    
     # BUGFIX: RemoveInputData.py - Bug fix for setting failover request for removal operation.
     # BUGFIX: RootApplication.py - Use SetupProject of the corresponding DaVinci version to set the environment.
     # NEW: MicroDST_StreamedData_run.py - Initial iteration of MicroDST workflow template. 
-    Workflow = wo_2010091401
+    Workflow = wo_2010091501
 
     # CHANGE: InputDataResolution.py - Updated hack for RAW protocol access of prepending "root:" to prepending "mdf:" after updates from Markus.
     # CHANGE: CondDBAccess.py - Updated to use the DIRAC CS to persist CondDB access information.  This allows to have a CondDB mask and also to easily obtain lookup files for individual sites on request.
