Minor updates to Core, Workflow and Interfaces.
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@28411 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -25,10 +25,11 @@ Versions
     # CHANGE: Production.py - Avoid duplicates in software package list.  
     # CHANGE: Production.py - Add support for MDST productions with DaVinci.
     # CHANGE: Production.py - Productions no longer use  SendBookkeeping, this has been factored into the UploadOutputData module. 
+    # CHANGE: Production.py - Provide a way to forcibly prepend an input processing pass of data to a production e.g. "Real Data" for merging productions. 
     # CHANGE: DiracLHCb.py - getFilesWithGivenDataSets -> getFilesWithGivenDataSetsForUsers at the request of Zoltan.
     # NEW: DiracLHCb.py - Expose BK client functionality.
     # CHANGE: LHCbJob.py - Promoted setInputDataPolicy() to the base class. 
-    Interfaces = if_2010091501
+    Interfaces = if_2010091502
 
     # CHANGE: DataRecoveryAgent.py - Some minor optimizations, now rely on production management system status since we no longer consider Stalled jobs directly.  Updated default of removal flag to True since this was enabled in production.
     ProductionManagementSystem = pm_2010090201
@@ -37,7 +38,8 @@ Versions
     # NEW: Certification_Testing_run.py - First import of Certification Testing script. This is not a workflow template for the request page but a self-contained certification test relying on the DIRAC CS for evolving parameters.
     # BUGFIX: MC_Simulation_run.py - Minor fixes after testing.
     # CHANGE: FULL_RealData_Merging_run.py - Synchronize the merging production input data policy with that of the reconstruction production e.g. download.
-    # CHANGE: FULL_RealData_Merging_run.py - Update hack for list of streams to be saved.
+    # CHANGE: FULL_RealData_Merging_run.py - Update hack for list of streams to be saved. 
+    # CHANGE: FULL_RealData_Merging_run.py - Forcibly prepend an input processing pass of data to a production e.g. "Real Data" for merging productions. 
     # NEW: GaudiApplication.py - Add "hospital" to the list of job types potentially having streamed outputs. 
     # NEW: GaudiApplication.py - Also now support MDST files in an extension to the DaVinci streaming case.
     # NEW: UserJobFinalization.py - Added new replicateAndRegister option to specify the file catalog for user file uploads, requires new DMS tag. Also fix for restriction of SEs when nothing is specified.
@@ -47,14 +49,15 @@ Versions
     # BUGFIX: RemoveInputData.py - Bug fix for setting failover request for removal operation.
     # BUGFIX: RootApplication.py - Use SetupProject of the corresponding DaVinci version to set the environment.
     # NEW: MicroDST_StreamedData_run.py - Initial iteration of MicroDST workflow template. 
-    Workflow = wo_2010091501
+    Workflow = wo_2010091502
 
     # CHANGE: InputDataResolution.py - Updated hack for RAW protocol access of prepending "root:" to prepending "mdf:" after updates from Markus.
     # CHANGE: CondDBAccess.py - Updated to use the DIRAC CS to persist CondDB access information.  This allows to have a CondDB mask and also to easily obtain lookup files for individual sites on request.
     # CHANGE: ProductionEnvironment.py - Uses updated CondDBAccess utility.
     # CHANGE: ProductionOptions.py - Added initial iteration of MDST options. 
     # BUGFIX: CombinedSoftwareInstallation.py - Some cleanup and fixes for case where software is not found already preinstalled.     
-    Core = co_2010091501
+    # BUGFIX: ProductionEnvironment.py - Propagate missing parameter in result structure (case where LbLogin could not be found). 
+    Core = co_2010091502
 
   }
 
