git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@28457 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -19,7 +19,8 @@ Versions
     # CHANGE: The Bkk allows max 10 depth when you use getAncesstor and getDescendents methods.
     # CHANGE: Bkk is using bind variables after I noticed a few queries doesn't use bind variables. 
     # BUGFIX: the descendents methods had problem when the files didn't processed.
-    BookkeepingSystem = bk_2010091401
+    # BUGFIX: The getAllDescendents returns all the files which are corresponding to a different production.  
+    BookkeepingSystem = bk_2010092001
 
 
     # CHANGE: Production.py - Avoid duplicates in software package list.  
