--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,7 +4,8 @@ Versions
 
   Next Release
   {
-
+  	# BUGFIX: Configurations.py fix for Publisher
+	ResourceStatusSystem = rs_2010092301
   }
   
   v5r10-pre1
