--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,8 +4,7 @@ Versions
 
   Next Release
   {
-  	# BUGFIX: Configurations.py fix for Publisher
-	ResourceStatusSystem = rs_2010092301
+ 
   }
   
   v5r10-pre1
@@ -34,9 +33,13 @@ Versions
     # CHANGE: ProductionOptions.py - Added initial iteration of MDST options. 
     # BUGFIX: CombinedSoftwareInstallation.py - Some cleanup and fixes for case where software is not found already preinstalled.     
     # BUGFIX: ProductionEnvironment.py - Propagate missing parameter in result structure (case where LbLogin could not be found). 
-    Core = co_2010091502
+    # NEW: install_xxx.sh scripts - flag SkipCADownload to avoid download of CAs. This is no longer related to SkipCAChecks
+    Core = co_2010092201
     
-    DataManagementSystem = dm_2010072201
+    # NEW: new StorageUsageClient module
+    # CHANGE: scripts/dirac-dms-gridify-castor-file - more debugging print out
+    # CHANGE: TargzJobLogAgent - updated logic
+    DataManagementSystem = dm_2010092202
 
     # CHANGE: Production.py - Avoid duplicates in software package list.  
     # CHANGE: Production.py - Add support for MDST productions with DaVinci.
@@ -67,7 +70,10 @@ Versions
     # NEW: MicroDST_StreamedData_run.py - Initial iteration of MicroDST workflow template. 
     Workflow = wo_2010091502
 
-    ResourceStatusSystem = rs_2010072801
+    # CHANGE: Policy/Configurations.py - Sites ban policy
+    # BUGFIX: Configurations.py fix for Publisher
+    ResourceStatusSystem = rs_2010092301
+    
     SAMSystem = sa_2010080301
     WorkloadManagementSystem = wm_2010073001
 
