--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,7 +4,11 @@ Versions
 
   Next Release
   {
- 
+    # NEW: TransformationHandler and ProductionManagerHandler use TransformationHandlerBase
+    # CHANGE: dirac-production-remove-output, dirac-production-verify-output now take list of prods
+    # CHANGE: ValidateOutputDataAgent, ProductionCleaningAgent use dirs found in the workflow params and in the storage usage DB
+    # CHANGE: AtomicRun plugin (TransformationPlugin) now populates the TransformationRuns table and does not abuse the BK for the RunNumber (taken from the TransformationFiles table).
+    ProductionManagementSystem = pm_2010092201  
   }
   
   v5r10-pre1
