--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -54,7 +54,9 @@ Versions
     # CHANGE: LHCbJob.py - Promoted setInputDataPolicy() to the base class. 
     Interfaces = if_2010091502
 
-    # CHANGE: DataRecoveryAgent.py - Some minor optimizations, now rely on production management system status since we no longer consider Stalled jobs directly.  Updated default of removal flag to True since this was enabled in production.
+    # CHANGE: DataRecoveryAgent.py - Some minor optimizations, now rely on production management system status 
+    #         since we no longer consider Stalled jobs directly.  Updated default of removal flag to True since 
+    #         this was enabled in production.
     ProductionManagementSystem = pm_2010090201
 
     # NEW: FULL_RealData_Merging_run.py - Added template for real data reconstruction with optional merging embedded.
