git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@28624 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,7 +4,9 @@ Versions
 
   Next Release
   {
-
+  #NEW: I added the instant luminosity to the files table.
+  #BUGFIX: One of the oracle procedure crashed because I forget to remove the False flag. It means the Oracle stored procedure can not found the cursor.
+  BookkeepingSystem = bk_2010092701
   }
   
   v5r10-pre1
