git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@28630 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -6,7 +6,8 @@ Versions
   {
   #NEW: I added the instant luminosity to the files table.
   #BUGFIX: One of the oracle procedure crashed because I forget to remove the False flag. It means the Oracle stored procedure can not found the cursor.
-  BookkeepingSystem = bk_2010092702
+  #BUGFIX: I missed a '/' 
+  BookkeepingSystem = bk_2010092801
   }
   
   v5r10-pre1
