LHCbDIRAC/Core/co_2010093001
git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@28737 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -6,6 +6,9 @@ Versions
   {
     # BUGFIX: I made a typo 
     BookkeepingSystem = bk_2010092901
+    
+    # CHANGE: ProductionEnvironment.py - Added support for sending an InstallArea/python.zip or InstallArea/python directory in the job input sandbox such that gaudirun.py correctly picks up configurables.
+    Core = co_2010093001
   }
   
   v5r10-pre4
