git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@28799 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,7 +4,8 @@ Versions
 
   Next Release
   {
-    
+    # NEW: The instant luminosity is propagated from the raw files.
+    BookkeepingSystem = bk_2010100101
   }
   
   v5r10-pre5
