git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@29050 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,7 +4,10 @@ Versions
 
   Next Release
   {
-
+   # BUGFIX: The bkk web interface didn't show the files due to the instlumi. This attributes missed in the query.
+   # BUGFIX: A typo was introduce in the getFilesWithGivenDataSetsForUsers.
+   # BUGFIX: getFilesWithGivenDataSetsForUsers added again to the BookkeepingClient.py because some point it disappeared
+   BookkeepingSystem = bk_2010100501
   }
   
   v5r10-pre8
