--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,7 +4,9 @@ Versions
 
   Next Release
   {
- 
+ 	# NEW: DownHillPropagation policy
+	#CHANGE: Removed Andrew from list of notified persons
+	ResourceStatusSystem = rs_2010100601
   }
   
   v5r10-pre10
