git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@29406 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,7 +4,9 @@ Versions
 
   Next Release
   {
-
+    # BUGFIX: The Luminosity was integer before and I changed to float, because the luminosity can be a real value.
+    # BUGFIX: The FileDialog window size is changed and the maximized and minimized button is added to the window.
+    BookkeepingSystem = bk_2010101301
   }
   
   v5r10
