--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,10 +4,29 @@ Versions
 
   Next Release
   {
+
+  }
+  
+  v5r10p1
+  {
     # BUGFIX: The Luminosity was integer before and I changed to float, because the luminosity can be a real value.
     # BUGFIX: The FileDialog window size is changed and the maximized and minimized button is added to the window.
     BookkeepingSystem = bk_2010101301
-  }
+    
+    ConfigurationSystem = cs_2010072701
+
+    # BUGFIX: Utilities/ProductionLogAnalysis.py - updates to accommodate the ever changing standard output of DaVinci
+    Core = co_2010101301
+    
+    DataManagementSystem = dm_2010092202
+    Interfaces = if_2010100601
+    ProductionManagementSystem = pm_2010093001  
+    Workflow = wo_2010100601
+    ResourceStatusSystem = rs_2010100601    
+    SAMSystem = sa_2010080301
+    WorkloadManagementSystem = wm_2010073001
+
+  } 
   
   v5r10
   {
