git-svn-id: svn+ssh://svn.cern.ch/reps/dirac/LHCbDIRAC/trunk@29706 4525493e-7705-40b1-a816-d608a930855b

--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -6,6 +6,8 @@ Versions
   {
 	ResourceStatusSystem = rs_2010101501
 	#NEW: Added plots and graphs to be displayed on the Sites page
+	# CHANGE: Agent/RequestTrackingAgent.py - specialized BK methods are used to collect the information (much faster)
+	ProductionManagementSystep =
   }
 
   v5r10p3
