--- a/LHCbDIRAC/versions.cfg
+++ b/LHCbDIRAC/versions.cfg
@@ -4,10 +4,45 @@ Versions
 
   Next Release
   {
-	ResourceStatusSystem = rs_2010101501
-	#NEW: Added plots and graphs to be displayed on the Sites page
-	# CHANGE: Agent/RequestTrackingAgent.py - specialized BK methods are used to collect the information (much faster)
-	ProductionManagementSystep =
+
+  }
+  
+  v5r11-pre1
+  {
+    BookkeepingSystem = bk_2010101301
+    ConfigurationSystem = cs_2010072701
+    
+    # CHANGE: CombinedSoftwareInstallation - several fixes to allow local installation, extra printout
+    Core = co_2010102101
+    
+    # CHANGE: StoragUsageAgent - make the active period configurable.
+    # NEW: Created LHCbDIRAC/DataManagementSystem/Client/DataIntegrityClient.py and moved 
+    #      the relevant (BK related methods) into there.
+    # NEW: dirac-dms-check-directory-integrity - script for checking directory integrity.
+    DataManagementSystem = dm_2010102101
+    
+    Interfaces = if_2010100601
+    
+    # CHANGE: Agent/RequestTrackingAgent.py - specialized BK methods are used to collect the information (much faster)
+    # CHANGE: Major reorganization of the code, multiple agents moved to DIRAC/Transformation system, clean-up
+    #         to avoid unnecessary redirections. 
+    ProductionManagementSystem = pm_2010102101
+    
+    # NEW: Added plots and graphs to be displayed on the Sites page
+    ResourceStatusSystem = rs_2010101501
+    
+    SAMSystem = sa_2010080301
+    
+    # NEW: ProductionManagement split into Transformation System LHCb complement and higher level 
+    #      LHCb ProductionManagement system
+    TransformationSystem = ts_2010102101
+    
+    # BUGFIX: UserJobFinalization - added protection for a rare case where the proxy information 
+    #         could not be obtained in the job.
+    Workflow = wo_2010102101
+    
+    WorkloadManagementSystem = wm_2010073001
+
   }
 
   v5r10p3
